--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/stijl.css" />
   </head>
   <body>
+    <!-- oeps - geen html tag gebruikt -->
     Welkom
     <!-- body -->
     <script src="./js/script.js"></script>
